# openslide

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTING.txt  Dockerfile  Doxyfile  LICENSE-openjpeg.txt  LICENSE.txt  Makefile.am  Mayhemfile  README  README.md  README.txt  TODO  TODO.txt  autogen.sh  config.h.cmake  configure.ac  emscripten-cross.txt  info.md  intro.doxy  intro.txt  meson.build  meson.format  meson_options.txt  openslide-dll.manifest.in  openslide.pc.in  pyproject.toml  readme-proscia.txt  wholeslide.h  wholeslide.pc.in  ws_close.3  ws_open.3  ws_prefetch_hint.3  (+2 more)
common/: info.md  meson.build  openslide-common-cmdline.c  openslide-common-fail.c  openslide-common-fd.c  openslide-common-file.c  openslide-common.h
doc/: Doxyfile  Doxyfile.in  info.md  intro.doxy  meson.build
libopenjpeg/: .gitignore  Makefile.am  opj_configure.h
src/: CMakeLists.txt  Makefile.am  base64.c  base64.h  info.md  make-tables.c  meson.build  openslide-cache.c  openslide-cache.h  openslide-cairo.h  openslide-cmake-dll.rc.in  openslide-decode-aes.c  openslide-decode-aes.h  openslide-decode-base64.c  openslide-decode-base64.h  openslide-decode-bmp.c  openslide-decode-bmp.h  openslide-decode-dicom.c  openslide-decode-dicom.h  openslide-decode-gdkpixbuf.c  openslide-decode-gdkpixbuf.h  openslide-decode-gsf.c  openslide-decode-gsf.h  openslide-decode-hevc.c  openslide-decode-hevc.h  openslide-decode-jp2k-grok.c  openslide-decode-jp2k.c  openslide-decode-jp2k.h  openslide-decode-jpeg.c  openslide-decode-jpeg.h  openslide-decode-jxr.c  openslide-decode-jxr.h  openslide-decode-pbkdf2.c  openslide-decode-pbkdf2.h  openslide-decode-png.c  openslide-decode-png.h  openslide-decode-sqlite.c  openslide-decode-sqlite.h  openslide-decode-tiff.c  openslide-decode-tiff.h  (+77 more)
src/gdal/: .gitignore  GDALmake.opt  GDALmake.opt.in  GNUmakefile  config.status  configure  configure.ac  generate_vcxproj.bat  libtool  makefile.vc
src/gdal/port/: GNUmakefile  cpl_config.h  cpl_config.h.vc.common  cpl_conv.cpp  cpl_json.cpp  cpl_vsil.cpp  cpl_vsil_curl.cpp  makefile.vc
test/: CMakeLists.txt  clang-lsan.supp  clang.supp  driver.in  driver.py  extended.c  fuzz.c  info.md  meson.build  mosaic.c  parallel.c  profile.c  query.c  requirements.txt  symlink.c  synth.c  test-common.c  test-common.h  test-jp2k-grok.c  test.c  try_open.c  valgrind.supp
test/cases/: frozen.yaml  info.md  mosaic.ini  slides.yaml
test/cases/aperio/: config.yaml
test/cases/aperio-33003/: config.yaml
test/cases/aperio-33005/: config.yaml
test/cases/aperio-bad-compression/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-bad-imagedepth/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-bad-imagedescription-pointer/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-filename-utf8/: config.yaml  config.yaml.disabled
test/cases/aperio-imagedescription-decimal-comma/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-imagedescription-property-empty/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-imagedescription-property-no-value/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-jp2k-bad-eoc/: JP2K-33003-1.svs.xdelta  config.yaml
test/cases/aperio-jp2k-bad-image/: JP2K-33003-1.svs.xdelta  config.yaml
test/cases/aperio-jp2k-bad-numcomps/: CMU-1-JP2K-33005.svs.xdelta  config.yaml
test/cases/aperio-jp2k-bad-width/: CMU-1-JP2K-33005.svs.xdelta  config.yaml
test/cases/aperio-jp2k-tile-missing/: JP2K-33003-1.svs.xdelta  config.yaml
test/cases/aperio-jp2k-tile-zero-length/: JP2K-33003-1.svs.xdelta  config.yaml
test/cases/aperio-jpeg-tile-zero-length/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-label-bad-imagedescription/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-label-bad-subfile-type/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-label-no-imagedescription/: CMU-1.svs.xdelta
test/cases/aperio-label-no-subfile-type/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-small-region/: config.yaml
test/cases/aperio-thumbnail-empty-imagedescription/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-thumbnail-mismatched-icc-profile/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-thumbnail-no-imagedescription/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-truncated-imagedescription/: config.yaml
test/cases/aperio-truncated-imagedescription-libtiff3/: CMU-1.svs.xdelta  config.yaml
test/cases/aperio-truncated-top-level/: CMU-1.svs.xdelta  config.yaml
test/cases/argos/: config.yaml
test/cases/argos-stacked/: config.yaml
test/cases/argos-xml-bad-minz/: Argos-1.avs.xdelta  config.yaml
test/cases/argos-xml-no-maxz/: Argos-1.avs.xdelta  config.yaml
test/cases/argos-xml-no-stacks/: Argos-1.avs.xdelta
test/cases/argos-xml-too-many-stacks/: Argos-1.avs.xdelta  config.yaml
test/cases/cache-eviction/: config.yaml
test/cases/debug-help/: config.yaml
test/cases/debug-tiles/: config.yaml
test/cases/dicom-associated-concatenation/: 000003.dcm.xdelta  config.yaml
test/cases/dicom-associated-conflicting/: 000015.dcm.xdelta  config.yaml
test/cases/dicom-associated-duplicate/: config.yaml
test/cases/dicom-associated-no-totalpixelmatrixrows/: 000003.dcm.xdelta  config.yaml
test/cases/dicom-concatenation-bad-inconcatenationnumber/: 4_1.xdelta  config.yaml
test/cases/dicom-concatenation-bad-inconcatenationnumber-2/: 4_2.xdelta  config.yaml
test/corpus/: CMU-1-Saved-1_16.mrxs
test/env/: info.md  meson.build  mkenv.py
test/lib/: info.md  libtest-fd.c  libtest.h  meson.build
tools/: .gitignore  CMakeLists.txt  info.md  meson.build  openslide-quickhash1sum.1.in  openslide-quickhash1sum.c  openslide-show-properties.1.in  openslide-show-properties.c  openslide-tools-common.c  openslide-tools-common.h  openslide-write-associated-images.1.in  openslide-write-associated-images.c  openslide-write-png.1.in  openslide-write-png.c  slidetool-icc.c  slidetool-image.c  slidetool-prop.c  slidetool-slide.c  slidetool-test.c  slidetool-util.c  slidetool.1.in  slidetool.c  slidetool.h
(+829 files in other folders)
